// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`testResponseStatusSuccess should add test for status success 1`] = `
[
  "// Validate status 2xx 
pm.test("[GET]::/crm/companies/:id - Status code is 2xx", function () {
   pm.response.to.be.success;
});
",
]
`;

exports[`testResponseStatusSuccess should add test with separator symbol for status success 1`] = `
[
  "// Validate status 2xx 
pm.test("[GET]==/crm/companies/:id - Status code is 2xx", function () {
   pm.response.to.be.success;
});
",
]
`;
